Changed convert.py to use casanova and 20161124_3C343.cfg accordingly. Not tested yet. Needs working installation of casanova on happili.

--- a/ipython-notebooks/20161124_3C343.cfg
+++ b/ipython-notebooks/20161124_3C343.cfg
@@ -17,11 +17,13 @@ aoflagger_fluxcalstrat = 'fluxcal.rfis'
 aoflagger_polcalstrat = 'polcal.rfis'
 aoflagger_targetstrat = 'target.rfis'
 manual_flag_auto = True
-manual_flag_antennae = 'RT3,RT8,RTC,RTD'
+manual_flag_antenna = 'RT3,RT8,RTC,RTD'
 manual_flag_corr = 'XY,YX,YY'
+manual_flag_shadow = True
+manual_flag_baseline = ''
 
 [CONVERT]
-ms2uvfits_tool = 'casapy'
+ms2uvfits_tool = 'casa'
 uvfits2mir_tool = 'fits'
 convert_fluxcal = True
 convert_polcal = False
