Added preflagging module and ao_strategies subdirectory with strategies for flagging with AOFlagger. Changed notebook to include convert and preflag step.

--- a/ipython-notebooks/20161124_3C343.cfg
+++ b/ipython-notebooks/20161124_3C343.cfg
@@ -10,6 +10,7 @@ selfcalsubdir = '/selfcal'
 finalsubdir = '/final'
 
 [PREFLAG]
+aoflagger = True
 aoflagger_fluxcal = True
 aoflagger_polcal = False
 aoflagger_target = True
@@ -33,6 +34,7 @@ convert_target = True
 compensate_fringestop_fluxcal = True
 compensate_fringestop_polcal = False
 compensate_fringestop_target = True
+obsfreq = 1.42046
 fluxcal_gains = True
 fluxcal_bandpass = True
 polcal_leakage = False
