Changed scal.py and added field parameter to config file to enable self-calibration of coming 3C147 observation

--- a/ipython-notebooks/20161124_3C343.cfg
+++ b/ipython-notebooks/20161124_3C343.cfg
@@ -42,6 +42,7 @@ polcal_angle = False
 transfer_to_target = True
 
 [SELFCAL]
+field = 'target'
 chunksize = 0.02
 speed = 'normal'
 mode = 'manual'
