Modified ccal.py to move the flux calibrator to the field centre by phase selfcal before deriving bandpass and gain corrections. Changed some parameters in config file 20161124_3C343.cfg to account for this.

--- a/ipython-notebooks/20161124_3C343.cfg
+++ b/ipython-notebooks/20161124_3C343.cfg
@@ -31,10 +31,11 @@ convert_polcal = False
 convert_target = True
 
 [CROSSCAL]
-compensate_fringestop_fluxcal = True
-compensate_fringestop_polcal = False
-compensate_fringestop_target = True
+compensate_fringestop = True
+selfcal_fluxcal = True
+selfcal_fluxcal_solint = 0.1
 obsfreq = 1.42046
+equinox = 'J2000'
 fluxcal_gains = True
 fluxcal_bandpass = True
 polcal_leakage = False
