Changed convert.py to use casac (the CASA toolkit directly). Needs testing.

--- a/ipython-notebooks/20161124_3C343.cfg
+++ b/ipython-notebooks/20161124_3C343.cfg
@@ -35,7 +35,7 @@ compensate_fringestop = True
 selfcal_fluxcal = True
 selfcal_fluxcal_solint = 0.1
 obsfreq = 1.42046
-equinox = 'J2000'
+equinox = 'apparent'
 fluxcal_gains = True
 fluxcal_bandpass = True
 polcal_leakage = False
