Added option to not do manual flagging in preflag.py until the casac/casat problem is solved!

--- a/ipython-notebooks/20161124_3C343.cfg
+++ b/ipython-notebooks/20161124_3C343.cfg
@@ -17,6 +17,7 @@ aoflagger_target = True
 aoflagger_fluxcalstrat = 'fluxcal.rfis'
 aoflagger_polcalstrat = 'polcal.rfis'
 aoflagger_targetstrat = 'target.rfis'
+manual_flagging = False
 manual_flag_auto = True
 manual_flag_antenna = 'RT3,RT8,RTC,RTD'
 manual_flag_corr = 'XY,YX,YY'
