Fixed preflag module to do manual flagging now. Changed config files towards having better structure. Changes still ned to be implemented in other modules.

--- a/ipython-notebooks/commissioning/2211440_3C147.cfg
+++ b/ipython-notebooks/commissioning/2211440_3C147.cfg
@@ -10,36 +10,39 @@ selfcalsubdir = '/selfcal'
 finalsubdir = '/final'
 
 [PREFLAG]
-aoflagger = True
-aoflagger_fluxcal = True
-aoflagger_polcal = False
-aoflagger_target = False
-aoflagger_fluxcalstrat = 'fluxcal.rfis'
-aoflagger_polcalstrat = 'polcal.rfis'
-aoflagger_targetstrat = 'target.rfis'
-manual_flagging = True
-manual_flag_auto = False
-manual_flag_antenna = 'RT3,RT8,RTC,RTD'
-manual_flag_corr = 'XY,YX,YY'
-manual_flag_shadow = True
-manual_flag_baseline = ''
+preflag_aoflagger = True
+preflag_aoflagger_fluxcal = True
+preflag_aoflagger_polcal = False
+preflag_aoflagger_target = False
+preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'
+preflag_aoflagger_polcalstrat = 'polcal.rfis'
+preflag_aoflagger_targetstrat = 'target.rfis'
+preflag_manualflag = True
+preflag_manualflag_fluxcal = True
+preflag_manualflag_polcal = False
+preflag_manualflag_target = False
+preflag_manualflag_auto = False
+preflag_manualflag_antenna = 'RT3,RT8,RTC,RTD'
+preflag_manualflag_corr = 'XY,YX,YY'
+preflag_manualflag_shadow = True
+preflag_manualflag_baseline = ''
 
 [CONVERT]
-ms2uvfits_tool = 'casa'
-uvfits2mir_tool = 'fits'
+convert_ms2uvfits_tool = 'casa'
+convert_uvfits2mir_tool = 'fits'
 convert_fluxcal = True
 convert_polcal = False
 convert_target = False
 
 [CROSSCAL]
-fringestop = True
-fringestop_mode = 'direct'
-selfcal_fluxcal = True
-selfcal_fluxcal_solint = 0.016666
-obsfreq = 1.42046
-equinox = 'apparent'
-fluxcal_gains = True
-fluxcal_bandpass = True
-polcal_leakage = False
-polcal_angle = False
-transfer_to_target = True
+crosscal_fringestop = True
+crosscal_fringestop_mode = 'direct'
+crosscal_selfcal_fluxcal = True
+crosscal_selfcal_fluxcal_solint = 0.016666
+crosscal_obsfreq = 1.42046
+crosscal_equinox = 'apparent'
+crosscal_fluxcal_gains = True
+crosscal_fluxcal_bandpass = True
+crosscal_polcal_leakage = False
+crosscal_polcal_angle = False
+crosscal_transfer_to_target = False
