--- a/ipython-notebooks/commissioning/2211440_3C147.cfg
+++ b/ipython-notebooks/commissioning/2211440_3C147.cfg
@@ -21,8 +21,8 @@ preflag_manualflag = True
 preflag_manualflag_fluxcal = True
 preflag_manualflag_polcal = False
 preflag_manualflag_target = False
-preflag_manualflag_auto = False
-preflag_manualflag_antenna = 'RT3,RT8,RTC,RTD'
+preflag_manualflag_auto = True
+preflag_manualflag_antenna = 'RT2,RT3,RT8,RTC,RTD'
 preflag_manualflag_corr = 'XY,YX,YY'
 preflag_manualflag_shadow = True
 preflag_manualflag_baseline = ''
@@ -37,12 +37,9 @@ convert_target = False
 [CROSSCAL]
 crosscal_fringestop = True
 crosscal_fringestop_mode = 'direct'
-crosscal_selfcal_fluxcal = True
-crosscal_selfcal_fluxcal_solint = 0.016666
+crosscal_bandpass = True
+crosscal_leakage = False
+crosscal_polangle = False
 crosscal_obsfreq = 1.42046
 crosscal_equinox = 'apparent'
-crosscal_fluxcal_gains = True
-crosscal_fluxcal_bandpass = True
-crosscal_polcal_leakage = False
-crosscal_polcal_angle = False
 crosscal_transfer_to_target = False
