- Added support for polarisation and old WSRT calibration (still needs work) - Started tutorial on single pointing full polarisation old WSRT data

--- a/ipython-notebooks/commissioning/2211440_3C147.cfg
+++ b/ipython-notebooks/commissioning/2211440_3C147.cfg
@@ -28,18 +28,19 @@ preflag_manualflag_shadow = True
 preflag_manualflag_baseline = ''
 
 [CONVERT]
+convert_ms2uvfits = True
 convert_ms2uvfits_tool = 'casa'
+convert_uvfits2mir = True
 convert_uvfits2mir_tool = 'fits'
 convert_fluxcal = True
 convert_polcal = False
 convert_target = False
 
 [CROSSCAL]
+crosscal_mode = 'APERTIF'
 crosscal_fringestop = True
 crosscal_fringestop_mode = 'direct'
 crosscal_bandpass = True
-crosscal_leakage = False
-crosscal_polangle = False
-crosscal_obsfreq = 1.42046
-crosscal_equinox = 'apparent'
+crosscal_polarisation = False
+crosscal_polarisation_nchan = 1
 crosscal_transfer_to_target = False
