- crosscal, preflag fixed for WSRT polarisation calibration - tutorial A1 updated

--- a/ipython-notebooks/tutorials/cfg/A1.cfg
+++ b/ipython-notebooks/tutorials/cfg/A1.cfg
@@ -9,8 +9,26 @@ crosscalsubdir = 'crosscal'
 selfcalsubdir = 'selfcal'
 finalsubdir = 'final'
 
+[PREFLAG]
+preflag_aoflagger = True
+preflag_aoflagger_fluxcal = True
+preflag_aoflagger_polcal = True
+preflag_aoflagger_target = True
+preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'
+preflag_aoflagger_polcalstrat = 'polcal.rfis'
+preflag_aoflagger_targetstrat = 'target.rfis'
+preflag_manualflag = True
+preflag_manualflag_fluxcal = True
+preflag_manualflag_polcal = True
+preflag_manualflag_target = True
+preflag_manualflag_auto = True
+preflag_manualflag_antenna = 'RT5'
+preflag_manualflag_corr = ''
+preflag_manualflag_shadow = True
+preflag_manualflag_baseline = ''
+
 [CONVERT]
-convert_ms2uvfits = False
+convert_ms2uvfits = True
 convert_ms2uvfits_tool = 'casa'
 convert_uvfits2mir = True
 convert_uvfits2mir_tool = 'wsrtfits'
@@ -24,5 +42,4 @@ crosscal_fringestop = False
 crosscal_fringestop_mode = 'direct'
 crosscal_bandpass = True
 crosscal_polarisation = True
-crosscal_polarisation_nchan = 1
 crosscal_transfer_to_target = True
