- fixed a bug in the conversion from MS to UVFITS to write out multiple IFs - started refactoring of the selfcal module - started line tutorial (A2)

--- a/ipython-notebooks/tutorials/cfg/A1.cfg
+++ b/ipython-notebooks/tutorials/cfg/A1.cfg
@@ -3,10 +3,11 @@ apercaldir = '/home/adebahr/apercal'
 fluxcal = '3C147.MS'
 polcal = '3C138.MS'
 target = 'NGC4062.MS'
-basedir = '/data/adebahr/apertif/tutorial/NGC4062/'
+basedir = '/data/adebahr/apertif/tutorial/A1/'
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
 selfcalsubdir = 'selfcal'
+linesubdir = 'line'
 finalsubdir = 'final'
 
 [PREFLAG]
