- added system temperature application for old WSRT data

--- a/ipython-notebooks/tutorials/cfg/A1.cfg
+++ b/ipython-notebooks/tutorials/cfg/A1.cfg
@@ -41,6 +41,7 @@ convert_target = True
 crosscal_mode = 'WSRT'
 crosscal_fringestop = False
 crosscal_fringestop_mode = 'direct'
+crosscal_applysys = True
 crosscal_bandpass = True
 crosscal_polarisation = True
 crosscal_transfer_to_target = True
