--- a/ipython-notebooks/tutorials/cfg/A2.cfg
+++ b/ipython-notebooks/tutorials/cfg/A2.cfg
@@ -23,7 +23,7 @@ preflag_manualflag_fluxcal = True
 preflag_manualflag_polcal = False
 preflag_manualflag_target = True
 preflag_manualflag_auto = True
-preflag_manualflag_antenna = ''
+preflag_manualflag_antenna = 'RT5'
 preflag_manualflag_corr = ''
 preflag_manualflag_shadow = True
 preflag_manualflag_baseline = ''
@@ -41,13 +41,15 @@ convert_target = True
 crosscal_mode = 'WSRT'
 crosscal_fringestop = False
 crosscal_fringestop_mode = 'direct'
+crosscal_applysys = False
 crosscal_bandpass = True
 crosscal_polarisation = False
 crosscal_transfer_to_target = True
 
 [SELFCAL]
-selfcal_split_data = True
-selfcal_split_data_chunksize = 0.02
+selfcal_splitdata = True
+selfcal_splitdata_chunksize = 0.02
+selfcal_splitdata_freqaver = 0.001
 selfcal_mode = 'manual'
 selfcal_name_map = 'map'
 selfcal_name_beam = 'beam'
