- splitdata function added to scal.py (was tested on single subband and multi-subband data)

--- a/ipython-notebooks/tutorials/cfg/A1.cfg
+++ b/ipython-notebooks/tutorials/cfg/A1.cfg
@@ -45,3 +45,8 @@ crosscal_applysys = True
 crosscal_bandpass = True
 crosscal_polarisation = True
 crosscal_transfer_to_target = True
+
+[SELFCAL]
+selfcal_splitdata = True
+selfcal_splitdata_chunkbandwidth = 0.01
+selfcal_splitdata_channelbandwidth = 0.001
