- fixed convert.py to only write autocorrelations if set in cfg file. MIRIAD seems to have problems with handling them in imaging

--- a/ipython-notebooks/tutorials/cfg/A2.cfg
+++ b/ipython-notebooks/tutorials/cfg/A2.cfg
@@ -31,6 +31,7 @@ preflag_manualflag_baseline = ''
 [CONVERT]
 convert_ms2uvfits = True
 convert_ms2uvfits_tool = 'casa'
+convert_ms2uvfits_tool_casa_autocorr = False
 convert_uvfits2mir = True
 convert_uvfits2mir_tool = 'wsrtfits'
 convert_fluxcal = True
@@ -50,6 +51,8 @@ crosscal_transfer_to_target = True
 selfcal_splitdata = True
 selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
+selfcal_flagline = True
+selfcal_flagline_showplot = True
 selfcal_mode = 'manual'
 selfcal_name_map = 'map'
 selfcal_name_beam = 'beam'
