- automatic flagging of line and RFI for continuum calibration done - problems with conversion of datasets and applying system temperatures for old WSRT data. Needs to be solved. Working for continuum data, but nor for line when not applying system temperatures

--- a/ipython-notebooks/tutorials/cfg/A1.cfg
+++ b/ipython-notebooks/tutorials/cfg/A1.cfg
@@ -31,9 +31,10 @@ preflag_manualflag_baseline = ''
 [CONVERT]
 convert_ms2uvfits = True
 convert_ms2uvfits_tool = 'casa'
+convert_ms2uvfits_tool_casa_autocorr = False
 convert_uvfits2mir = True
 convert_uvfits2mir_tool = 'wsrtfits'
-convert_fluxcal = True
+convert_fluxcal = False
 convert_polcal = True
 convert_target = True
 
@@ -41,12 +42,17 @@ convert_target = True
 crosscal_mode = 'WSRT'
 crosscal_fringestop = False
 crosscal_fringestop_mode = 'direct'
-crosscal_applysys = True
+crosscal_applysys = False
 crosscal_bandpass = True
 crosscal_polarisation = True
 crosscal_transfer_to_target = True
 
 [SELFCAL]
+selfcal_image_imsize = 1537
+selfcal_image_cellsize = 4
 selfcal_splitdata = True
-selfcal_splitdata_chunkbandwidth = 0.01
+selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
+selfcal_flagline = True
+selfcal_flagline_sigma = 1
+selfcal_flagline_showplot = True
