- automatic flagging of line and RFI for continuum calibration done - problems with conversion of datasets and applying system temperatures for old WSRT data. Needs to be solved. Working for continuum data, but nor for line when not applying system temperatures

--- a/ipython-notebooks/tutorials/cfg/A1.cfg
+++ b/ipython-notebooks/tutorials/cfg/A1.cfg
@@ -55,4 +55,18 @@ selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
 selfcal_flagline = True
 selfcal_flagline_sigma = 1
-selfcal_flagline_showplot = True
+selfcal_parametric = True
+selfcal_parametric_skymodel_radius = 0.5
+selfcal_parametric_skymodel_cutoff = 0.8
+selfcal_parametric_skymodel_distance = 30
+selfcal_parametric_interval = 20
+selfcal_parametric_minuvrange = 0.5
+selfcal_parametric_maxuvrange = 1000
+selfcal_mode = 'standard'
+selfcal_mode_standard_majorcycle = 5
+selfcal_mode_standard_minorcycle = 3
+selfcal_mode_standard_c0 = 3
+selfcal_mode_standard_c1 = 5
+selfcal_mode_standard_drinit = 100
+selfcal_mode_standard_dr0 = 2.0
+selfcal_mode_standard_nsigma = 5
