- standard self-calibration implemented (need to find right parameters) - solution for system temperature application needs to be found -> limiting dynamic range a lot - final deep imaging using stacking implemented - working on final deep imaging using mfclean

--- a/ipython-notebooks/tutorials/cfg/A1.cfg
+++ b/ipython-notebooks/tutorials/cfg/A1.cfg
@@ -65,8 +65,22 @@ selfcal_parametric_maxuvrange = 1000
 selfcal_mode = 'standard'
 selfcal_mode_standard_majorcycle = 5
 selfcal_mode_standard_minorcycle = 3
-selfcal_mode_standard_c0 = 3
-selfcal_mode_standard_c1 = 5
+selfcal_mode_standard_c0 = 1.1
+selfcal_mode_standard_c1 = 1.5
 selfcal_mode_standard_drinit = 100
 selfcal_mode_standard_dr0 = 2.0
-selfcal_mode_standard_nsigma = 5
+selfcal_mode_standard_nsigma = 8
+selfcal_mode_standard_uvmin = [0.5,0.3,0.1,0.0,0.0]
+selfcal_mode_standard_uvmax = [3000,3000,3000,3000,3000]
+selfcal_mode_standard_solint = [10,5,3,2,1]
+
+[FINAL]
+final_continuum = True
+final_continuum_image_imsize = 1537
+final_continuum_image_cellsize = 4
+final_continuum_mode = 'mf'
+final_continuum_minorcycle = 3
+final_continuum_c0 = 3
+final_continuum_c1 = 3
+final_continuum_nsigma = 5
+final_continuum_extraiterations = 5000
