--- a/ipython-notebooks/tutorials/cfg/A1.cfg
+++ b/ipython-notebooks/tutorials/cfg/A1.cfg
@@ -84,3 +84,15 @@ final_continuum_c0 = 3
 final_continuum_c1 = 3
 final_continuum_nsigma = 5
 final_continuum_extraiterations = 5000
+final_line = True
+final_line_image_imsize = 1537
+final_line_image_cellsize = 4
+final_line_subtract = True
+final_line_mode_subtract = 'uvlin'
+final_line_mode_subtract_uvmodel_model = 'mf'
+final_line_image_mode = 'chunk'
+final_polarisation = True
+final_polarisation_image_imsize = 1537
+final_polarisation_image_cellsize = 4
+final_polarisation_makecube = True
+final_polarisation_rmsynth = True
