--- a/ipython-notebooks/tutorials/cfg/A1.cfg
+++ b/ipython-notebooks/tutorials/cfg/A1.cfg
@@ -59,9 +59,9 @@ selfcal_parametric = True
 selfcal_parametric_skymodel_radius = 0.5
 selfcal_parametric_skymodel_cutoff = 0.8
 selfcal_parametric_skymodel_distance = 30
-selfcal_parametric_interval = 10
-selfcal_parametric_minuvrange = 0.5
-selfcal_parametric_maxuvrange = 1000
+selfcal_parametric_solint = 10
+selfcal_parametric_uvmin = 0.5
+selfcal_parametric_uvmax = 1000
 selfcal_mode = 'standard'
 selfcal_mode_standard_majorcycle = 5
 selfcal_mode_standard_minorcycle = 3
@@ -73,6 +73,14 @@ selfcal_mode_standard_nsigma = 8
 selfcal_mode_standard_uvmin = [0.5,0.3,0.1,0.0,0.0]
 selfcal_mode_standard_uvmax = [3000,3000,3000,3000,3000]
 selfcal_mode_standard_solint = [10,5,3,2,1]
+
+[LINE]
+line_splitdata = True
+line_splitdata_chunkbandwidth = 0.02
+line_splitdata_channelbandwidth = 0.0002
+line_transfergains = True
+line_subtract = True
+line_subtract_mode = 'uvmodel'
 
 [FINAL]
 final_continuum = True
@@ -87,9 +95,6 @@ final_continuum_extraiterations = 5000
 final_line = True
 final_line_image_imsize = 1537
 final_line_image_cellsize = 4
-final_line_subtract = True
-final_line_mode_subtract = 'uvlin'
-final_line_mode_subtract_uvmodel_model = 'mf'
 final_line_image_mode = 'chunk'
 final_polarisation = True
 final_polarisation_image_imsize = 1537
