- wrote documentation in docs subdirectory - working on final module to create cube

--- a/ipython-notebooks/tutorials/cfg/A1.cfg
+++ b/ipython-notebooks/tutorials/cfg/A1.cfg
@@ -95,7 +95,7 @@ final_continuum_extraiterations = 5000
 final_line = True
 final_line_image_imsize = 1537
 final_line_image_cellsize = 4
-final_line_image_mode = 'chunk'
+final_line_image_mode = 'channel'
 final_polarisation = True
 final_polarisation_image_imsize = 1537
 final_polarisation_image_cellsize = 4
