- standard self-calibration implemented - fixed several issues with the reset method - Added self-calibration tutorial (adaptive self-calibration part still missing)

--- a/default.cfg
+++ b/default.cfg
@@ -62,7 +62,7 @@ selfcal_parametric_skymodel_distance = 30
 selfcal_parametric_solint = 10
 selfcal_parametric_uvmin = 0.5
 selfcal_parametric_uvmax = 1000
-selfcal_mode = 'standard'
+selfcal_mode = 'manual'
 selfcal_mode_standard_majorcycle = 5
 selfcal_mode_standard_minorcycle = 3
 selfcal_mode_standard_c0 = 1.1
@@ -73,6 +73,15 @@ selfcal_mode_standard_nsigma = 8
 selfcal_mode_standard_uvmin = [0.5,0.3,0.1,0.0,0.0]
 selfcal_mode_standard_uvmax = [3000,3000,3000,3000,3000]
 selfcal_mode_standard_solint = [10,5,3,2,1]
+selfcal_mode_manual_majorcycle = 3
+selfcal_mode_manual_minorcycle = [3,2,2]
+selfcal_mode_manual_minuvrange = [1,0.5,0.2]
+selfcal_mode_manual_maxuvrange = [3,3,3]
+selfcal_mode_manual_interval = [10,5,1]
+selfcal_mode_manual_niters = [[500,10000,10000],[500,10000,10000],[500,10000,10000]]
+selfcal_mode_manual_cleancutoff = [[0.0005,0.0001,0.00005],[0.0005,0.0001,0.00005],[0.0005,0.0001,0.00005]]
+selfcal_mode_manual_mskcutoff = [[0.005,0.001,0.0005],[0.005,0.001,0.0005],[0.005,0.001,0.0005]]
+selfcal_mode_manual_cleanstopcriterium = [['both','rms','rms'],['both','rms','rms'],['both','rms','rms']]
 
 [LINE]
 line_splitdata = True
