- adpative self-calibration added (need to work on parameters) - tutorial 1 finished

--- a/default.cfg
+++ b/default.cfg
@@ -82,6 +82,14 @@ selfcal_mode_manual_niters = [[500,10000,10000],[500,10000,10000],[500,10000,100
 selfcal_mode_manual_cleancutoff = [[0.0005,0.0001,0.00005],[0.0005,0.0001,0.00005],[0.0005,0.0001,0.00005]]
 selfcal_mode_manual_mskcutoff = [[0.005,0.001,0.0005],[0.005,0.001,0.0005],[0.005,0.001,0.0005]]
 selfcal_mode_manual_cleanstopcriterium = [['both','rms','rms'],['both','rms','rms'],['both','rms','rms']]
+selfcal_mode_adaptive_startsolint = 20
+selfcal_mode_adaptive_startuvrange = 3
+selfcal_mode_adaptive_maxcycle = 3
+selfcal_mode_adaptive_drlim = 1.3
+selfcal_mode_adaptive_rmsfactor = 6.0
+selfcal_mode_adaptive_resirmsfactor = 1.75
+selfcal_mode_adaptive_firstniter = 500
+selfcal_mode_adaptive_firstrmsfactor = 10.0
 
 [LINE]
 line_splitdata = True
