--- a/ipython-notebooks/tutorials/cfg/1.cfg
+++ b/ipython-notebooks/tutorials/cfg/1.cfg
@@ -2,7 +2,7 @@
 apercaldir = '/home/adebahr/apercal'
 fluxcal = ''
 polcal = ''
-target = 'NGC4258.MS'
+target = 'NGC5023.MS'
 basedir = '/data/adebahr/apertif/tutorial/1/'
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
@@ -45,6 +45,14 @@ selfcal_mode_manual_niters = [[500,10000,10000],[500,10000,10000],[500,10000,100
 selfcal_mode_manual_cleancutoff = [[0.004,0.002,0.001],[0.003,0.001,0.0005],[0.0015,0.0008,0.0004]]
 selfcal_mode_manual_mskcutoff = [[0.01,0.005,0.003],[0.008,0.004,0.002],[0.005,0.002,0.001]]
 selfcal_mode_manual_cleanstopcriterium = [['both','rms','rms'],['both','rms','rms'],['both','rms','rms']]
+selfcal_mode_adaptive_startsolint = 20
+selfcal_mode_adaptive_startuvrange = 3
+selfcal_mode_adaptive_maxcycle = 5
+selfcal_mode_adaptive_drlim = 2.0
+selfcal_mode_adaptive_rmsfactor = 6.0
+selfcal_mode_adaptive_resirmsfactor = 1.75
+selfcal_mode_adaptive_firstniter = 500
+selfcal_mode_adaptive_firstrmsfactor = 10.0
 
 [FINAL]
 final_continuum = True
