--- a/ipython-notebooks/tutorials/cfg/T1.cfg
+++ b/ipython-notebooks/tutorials/cfg/T1.cfg
@@ -18,21 +18,21 @@ selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
 selfcal_flagline = True
 selfcal_flagline_sigma = 1
-selfcal_parametric = True
+selfcal_parametric = False
 selfcal_parametric_skymodel_radius = 0.5
 selfcal_parametric_skymodel_cutoff = 0.8
 selfcal_parametric_skymodel_distance = 30
 selfcal_parametric_solint = 10
-selfcal_parametric_uvmin = 0.5
+selfcal_parametric_uvmin = 1.0
 selfcal_parametric_uvmax = 1000
-selfcal_mode = 'adaptive'
+selfcal_mode = 'standard'
 selfcal_mode_standard_majorcycle = 5
 selfcal_mode_standard_minorcycle = 3
-selfcal_mode_standard_c0 = 1.1
-selfcal_mode_standard_c1 = 1.5
-selfcal_mode_standard_drinit = 100
+selfcal_mode_standard_c0 = 10
+selfcal_mode_standard_c1 = 15
+selfcal_mode_standard_drinit = 150
 selfcal_mode_standard_dr0 = 2.0
-selfcal_mode_standard_nsigma = 8
+selfcal_mode_standard_nsigma = 5
 selfcal_mode_standard_uvmin = [0.5,0.3,0.1,0.0,0.0]
 selfcal_mode_standard_uvmax = [3000,3000,3000,3000,3000]
 selfcal_mode_standard_solint = [10,5,3,2,1]
@@ -45,8 +45,8 @@ selfcal_mode_manual_niters = [[500,10000,10000],[500,10000,10000],[500,10000,100
 selfcal_mode_manual_cleancutoff = [[0.004,0.002,0.001],[0.003,0.001,0.0005],[0.0015,0.0008,0.0004]]
 selfcal_mode_manual_mskcutoff = [[0.01,0.005,0.003],[0.008,0.004,0.002],[0.005,0.002,0.001]]
 selfcal_mode_manual_cleanstopcriterium = [['both','rms','rms'],['both','rms','rms'],['both','rms','rms']]
-selfcal_mode_adaptive_startsolint = 20
-selfcal_mode_adaptive_startuvrange = 3
+selfcal_mode_adaptive_startsolint = 10
+selfcal_mode_adaptive_startuvrange = 1.0
 selfcal_mode_adaptive_maxcycle = 5
 selfcal_mode_adaptive_drlim = 1.6
 selfcal_mode_adaptive_rmsfactor = 6.0
@@ -58,12 +58,14 @@ selfcal_mode_adaptive_firstrmsfactor = 10.0
 final_continuum = True
 final_continuum_image_imsize = 1537
 final_continuum_image_cellsize = 4
-final_continuum_mode = 'mf'
-final_continuum_minorcycle = 3
-final_continuum_c0 = 1.5
-final_continuum_c1 = 2
-final_continuum_nsigma = 8
-final_continuum_extraiterations = 5000
+final_continuum_mode = 'stack'
+final_continuum_minorcycle = 5
+final_continuum_c0 = 10
+final_continuum_c1 = 15
+final_continuum_drinit = 150
+final_continuum_dr0 = 2.0
+final_continuum_nsigma = 5
+final_continuum_extraiterations = 0
 final_line = False
 final_line_image_imsize = 1537
 final_line_image_cellsize = 4
