- same gridding in invert step now for doing mosaics for all pointings - additional options to define fwhm and pa of restoring beam in final step

--- a/ipython-notebooks/tutorials/cfg/T1.cfg
+++ b/ipython-notebooks/tutorials/cfg/T1.cfg
@@ -58,6 +58,8 @@ selfcal_mode_adaptive_firstrmsfactor = 10.0
 final_continuum = True
 final_continuum_image_imsize = 1537
 final_continuum_image_cellsize = 4
+final_continuum_image_centre = '10:52:22.0,58:02:00.0'
+final_continuum_image_beam = '15.0,15.0,0.0'
 final_continuum_mode = 'stack'
 final_continuum_minorcycle = 5
 final_continuum_c0 = 10
@@ -65,13 +67,16 @@ final_continuum_c1 = 15
 final_continuum_drinit = 150
 final_continuum_dr0 = 2.0
 final_continuum_nsigma = 5
-final_continuum_extraiterations = 0
 final_line = False
 final_line_image_imsize = 1537
 final_line_image_cellsize = 4
+final_line_image_centre = '10:52:22.0,58:02:00.0'
+final_line_image_beam = '15.0,15.0,0.0'
 final_line_image_mode = 'channel'
 final_polarisation = False
 final_polarisation_image_imsize = 1537
 final_polarisation_image_cellsize = 4
+final_polarisation_image_centre = '10:52:22.0,58:02:00.0'
+final_polarisation_image_beam = '15.0,15.0,0.0'
 final_polarisation_makecube = True
 final_polarisation_rmsynth = True
