--- a/default.cfg
+++ b/default.cfg
@@ -1,9 +1,9 @@
 [INITIAL]
 apercaldir = '/home/adebahr/apercal'
-fluxcal = '3C147.MS'
-polcal = '3C138.MS'
-target = 'NGC4062.MS'
-basedir = '/data/adebahr/apertif/tutorial/0/'
+fluxcal = ''
+polcal = ''
+target = 'acf4-04.MS'
+basedir = '/data/adebahr/apertif/tutorial/T2/ACF4/'
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
 selfcalsubdir = 'selfcal'
@@ -62,17 +62,19 @@ selfcal_parametric_skymodel_distance = 30
 selfcal_parametric_solint = 10
 selfcal_parametric_uvmin = 0.5
 selfcal_parametric_uvmax = 1000
-selfcal_mode = 'manual'
-selfcal_mode_standard_majorcycle = 5
-selfcal_mode_standard_minorcycle = 3
-selfcal_mode_standard_c0 = 1.1
-selfcal_mode_standard_c1 = 1.5
-selfcal_mode_standard_drinit = 100
+selfcal_mode = 'standard'
+selfcal_mode_standard_majorcycle = 3
+selfcal_mode_standard_majorcycle_function = 'square'
+selfcal_mode_standard_minorcycle = 5
+selfcal_mode_standard_minorcycle_function = 'linear'
+selfcal_mode_standard_c0 = 10.0
+selfcal_mode_standard_c1 = 5.0
+selfcal_mode_standard_drinit = 150
 selfcal_mode_standard_dr0 = 2.0
-selfcal_mode_standard_nsigma = 8
-selfcal_mode_standard_uvmin = [0.5,0.3,0.1,0.0,0.0]
-selfcal_mode_standard_uvmax = [3000,3000,3000,3000,3000]
-selfcal_mode_standard_solint = [10,5,3,2,1]
+selfcal_mode_standard_nsigma = 5
+selfcal_mode_standard_uvmin = [0.5,0.3,0.0]
+selfcal_mode_standard_uvmax = [3000,3000,3000]
+selfcal_mode_standard_solint = [20,10,5]
 selfcal_mode_manual_majorcycle = 3
 selfcal_mode_manual_minorcycle = [3,3,3]
 selfcal_mode_manual_uvmin = [1,0.5,0.2]
@@ -82,14 +84,14 @@ selfcal_mode_manual_niters = [[500,10000,10000],[500,10000,10000],[500,10000,100
 selfcal_mode_manual_cleancutoff = [[0.004,0.002,0.001],[0.003,0.001,0.0005],[0.0015,0.0008,0.0004]]
 selfcal_mode_manual_mskcutoff = [[0.01,0.005,0.003],[0.008,0.004,0.002],[0.005,0.002,0.001]]
 selfcal_mode_manual_cleanstopcriterium = [['both','rms','rms'],['both','rms','rms'],['both','rms','rms']]
-selfcal_mode_adaptive_startsolint = 20
-selfcal_mode_adaptive_startuvrange = 3
-selfcal_mode_adaptive_maxcycle = 5
-selfcal_mode_adaptive_drlim = 2.0
-selfcal_mode_adaptive_rmsfactor = 6.0
-selfcal_mode_adaptive_resirmsfactor = 1.75
-selfcal_mode_adaptive_firstniter = 500
-selfcal_mode_adaptive_firstrmsfactor = 10.0
+selfcal_mode_adaptive_startsolint = 20          # original solution interval in minutes
+selfcal_mode_adaptive_startuvrange = 0.5        # minimum uv distance
+selfcal_mode_adaptive_maxcycle = 5              # maximum number of cycles
+selfcal_mode_adaptive_drlim = 1.5               # threshold for components
+selfcal_mode_adaptive_rmsfactor = 5.0           # mask threshold is th.noise * this factor * res.rms./th.noise
+selfcal_mode_adaptive_resirmsfactor = 2.0       # clean cutoff = res.rms * this factor
+selfcal_mode_adaptive_firstniter = 500          # number of iterations for clean for the first iteration
+selfcal_mode_adaptive_firstrmsfactor = 10.0     # rmsfactor for the first iteration
 
 [LINE]
 line_splitdata = True
@@ -103,18 +105,26 @@ line_subtract_mode = 'uvmodel'
 final_continuum = True
 final_continuum_image_imsize = 1537
 final_continuum_image_cellsize = 4
-final_continuum_mode = 'mf'
-final_continuum_minorcycle = 3
-final_continuum_c0 = 3
-final_continuum_c1 = 3
-final_continuum_nsigma = 5
+final_continuum_image_centre = '15:05:00.0,43:30:00.0'
+final_continuum_image_beam = ''
+final_continuum_mode = 'stack'
+final_continuum_minorcycle = 5
+final_continuum_c0 = 40
+final_continuum_c1 = 5
+final_continuum_nsigma = 3
+final_continuum_drinit = 200
+final_continuum_dr0 = 4
 final_continuum_extraiterations = 5000
-final_line = True
+final_line = False
 final_line_image_imsize = 1537
 final_line_image_cellsize = 4
+final_line_image_centre = '04:15:00.0,45:00:00.0'
+final_line_image_beam = ''
 final_line_image_mode = 'channel'
-final_polarisation = True
+final_polarisation = False
 final_polarisation_image_imsize = 1537
 final_polarisation_image_cellsize = 4
+final_polarisation_image_centre = '15:05:00.0,43:30:00.0'
+final_polarisation_image_beam = ''
 final_polarisation_makecube = True
 final_polarisation_rmsynth = True
