- fixed final imaging - added exceptions for unsuccessful selfcal - added amplitude calibration for selfcal

--- a/default.cfg
+++ b/default.cfg
@@ -54,7 +54,7 @@ selfcal_splitdata = True
 selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
 selfcal_flagline = True
-selfcal_flagline_sigma = 1
+selfcal_flagline_sigma = 15
 selfcal_parametric = True
 selfcal_parametric_skymodel_radius = 0.5
 selfcal_parametric_skymodel_cutoff = 0.8
@@ -62,19 +62,22 @@ selfcal_parametric_skymodel_distance = 30
 selfcal_parametric_solint = 10
 selfcal_parametric_uvmin = 0.5
 selfcal_parametric_uvmax = 1000
+selfcal_parametric_amp = False
 selfcal_mode = 'standard'
-selfcal_mode_standard_majorcycle = 3
+selfcal_mode_standard_majorcycle = 5
 selfcal_mode_standard_majorcycle_function = 'square'
-selfcal_mode_standard_minorcycle = 5
+selfcal_mode_standard_minorcycle = 3
 selfcal_mode_standard_minorcycle_function = 'linear'
-selfcal_mode_standard_c0 = 10.0
+selfcal_mode_standard_c0 = 15.0
 selfcal_mode_standard_c1 = 5.0
 selfcal_mode_standard_drinit = 150
 selfcal_mode_standard_dr0 = 2.0
 selfcal_mode_standard_nsigma = 5
-selfcal_mode_standard_uvmin = [0.5,0.3,0.0]
-selfcal_mode_standard_uvmax = [3000,3000,3000]
-selfcal_mode_standard_solint = [20,10,5]
+selfcal_mode_standard_uvmin = [0.5,0.3,0.1,0.0,0.0]
+selfcal_mode_standard_uvmax = [3000,3000,3000,3000,3000]
+selfcal_mode_standard_solint = [10,8,5,3,1]
+selfcal_mode_standard_amp = 'auto'
+selfcal_mode_standard_amp_auto_limit = 0.5
 selfcal_mode_manual_majorcycle = 3
 selfcal_mode_manual_minorcycle = [3,3,3]
 selfcal_mode_manual_uvmin = [1,0.5,0.2]
@@ -88,15 +91,15 @@ selfcal_mode_adaptive_startsolint = 20          # original solution interval in 
 selfcal_mode_adaptive_startuvrange = 0.5        # minimum uv distance
 selfcal_mode_adaptive_maxcycle = 5              # maximum number of cycles
 selfcal_mode_adaptive_drlim = 1.5               # threshold for components
-selfcal_mode_adaptive_rmsfactor = 5.0           # mask threshold is th.noise * this factor * res.rms./th.noise
+selfcal_mode_adaptive_rmsfactor = 8.0           # mask threshold is th.noise * this factor * res.rms./th.noise
 selfcal_mode_adaptive_resirmsfactor = 2.0       # clean cutoff = res.rms * this factor
 selfcal_mode_adaptive_firstniter = 500          # number of iterations for clean for the first iteration
-selfcal_mode_adaptive_firstrmsfactor = 10.0     # rmsfactor for the first iteration
+selfcal_mode_adaptive_firstrmsfactor = 15.0     # rmsfactor for the first iteration
 
 [LINE]
 line_splitdata = True
 line_splitdata_chunkbandwidth = 0.02
-line_splitdata_channelbandwidth = 0.0002
+line_splitdata_channelbandwidth = 0.000039
 line_transfergains = True
 line_subtract = True
 line_subtract_mode = 'uvmodel'
@@ -108,19 +111,18 @@ final_continuum_image_cellsize = 4
 final_continuum_image_centre = '15:05:00.0,43:30:00.0'
 final_continuum_image_beam = ''
 final_continuum_mode = 'stack'
-final_continuum_minorcycle = 5
-final_continuum_c0 = 40
-final_continuum_c1 = 5
-final_continuum_nsigma = 3
-final_continuum_drinit = 200
-final_continuum_dr0 = 4
-final_continuum_extraiterations = 5000
+final_continuum_majorcycle_function = 'square'
+final_continuum_minorcycle_function = 'linear'
+final_continuum_minorcycle = 3
+final_continuum_c0 = 15.0
+final_continuum_c1 = 5.0
+final_continuum_drinit = 150
+final_continuum_dr0 = 2.0
+final_continuum_nsigma = 5
 final_line = False
 final_line_image_imsize = 1537
 final_line_image_cellsize = 4
-final_line_image_centre = '04:15:00.0,45:00:00.0'
-final_line_image_beam = ''
-final_line_image_mode = 'channel'
+final_line_image_centre = '15:05:00.0,43:30:00.0'
 final_polarisation = False
 final_polarisation_image_imsize = 1537
 final_polarisation_image_cellsize = 4
