- continuum imaging for final step updated - continuum imaging for continuum subtraction in line module updated

--- a/default.cfg
+++ b/default.cfg
@@ -72,7 +72,7 @@ selfcal_mode_standard_c0 = 15.0
 selfcal_mode_standard_c1 = 5.0
 selfcal_mode_standard_drinit = 150
 selfcal_mode_standard_dr0 = 2.0
-selfcal_mode_standard_nsigma = 5
+selfcal_mode_standard_nsigma = 20
 selfcal_mode_standard_uvmin = [0.5,0.3,0.1,0.0,0.0]
 selfcal_mode_standard_uvmax = [3000,3000,3000,3000,3000]
 selfcal_mode_standard_solint = [10,8,5,3,1]
@@ -103,6 +103,16 @@ line_splitdata_channelbandwidth = 0.000039
 line_transfergains = True
 line_subtract = True
 line_subtract_mode = 'uvmodel'
+line_subtract_mode_uvmodel_majorcycle_function = 'square'
+line_subtract_mode_uvmodel_minorcycle_function = 'linear'
+line_subtract_mode_uvmodel_minorcycle = 3
+line_subtract_mode_uvmodel_c0 = 15.0
+line_subtract_mode_uvmodel_c1 = 5.0
+line_subtract_mode_uvmodel_drinit = 150
+line_subtract_mode_uvmodel_dr0 = 2.0
+line_subtract_mode_uvmodel_nsigma = 20
+line_subtract_mode_uvmodel_imsize = 1537
+line_subtract_mode_uvmodel_cellsize = 4
 
 [FINAL]
 final_continuum = True
@@ -118,7 +128,7 @@ final_continuum_c0 = 15.0
 final_continuum_c1 = 5.0
 final_continuum_drinit = 150
 final_continuum_dr0 = 2.0
-final_continuum_nsigma = 5
+final_continuum_nsigma = 20
 final_line = False
 final_line_image_imsize = 1537
 final_line_image_cellsize = 4
