- added notebook to reduce APERTIF data - changed Stokes i to ii for invert temporarily - added flagging strategy for APERTIF XX polarisation only - changes in convert to use APERTIF data

--- a/ipython-notebooks/commissioning/APERTIF/M51.cfg
+++ b/ipython-notebooks/commissioning/APERTIF/M51.cfg
@@ -1,9 +1,9 @@
 [INITIAL]
 apercaldir = '/home/adebahr/apercal'
-fluxcal = ''
+fluxcal = '3C147.MS'
 polcal = ''
-target = 'acf4-04.MS'
-basedir = '/data/adebahr/apertif/tutorial/T2/ACF4/'
+target = 'M51.MS'
+basedir = '/data/adebahr/apertif/7070708_M51/'
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
 selfcalsubdir = 'selfcal'
@@ -13,18 +13,18 @@ finalsubdir = 'final'
 [PREFLAG]
 preflag_aoflagger = True
 preflag_aoflagger_fluxcal = True
-preflag_aoflagger_polcal = True
+preflag_aoflagger_polcal = False
 preflag_aoflagger_target = True
-preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'
-preflag_aoflagger_polcalstrat = 'polcal.rfis'
-preflag_aoflagger_targetstrat = 'target.rfis'
+preflag_aoflagger_fluxcalstrat = 'target_apertif_XX.rfis'
+preflag_aoflagger_polcalstrat = ''
+preflag_aoflagger_targetstrat = 'target_apertif_XX.rfis'
 preflag_manualflag = True
 preflag_manualflag_fluxcal = True
-preflag_manualflag_polcal = True
+preflag_manualflag_polcal = False
 preflag_manualflag_target = True
 preflag_manualflag_auto = True
-preflag_manualflag_antenna = 'RT5'
-preflag_manualflag_corr = ''
+preflag_manualflag_antenna = ''
+preflag_manualflag_corr = 'XY,YX,YY'
 preflag_manualflag_shadow = True
 preflag_manualflag_baseline = ''
 
@@ -33,9 +33,9 @@ convert_ms2uvfits = True
 convert_ms2uvfits_tool = 'casa'
 convert_ms2uvfits_tool_casa_autocorr = False
 convert_uvfits2mir = True
-convert_uvfits2mir_tool = 'wsrtfits'
-convert_fluxcal = False
-convert_polcal = True
+convert_uvfits2mir_tool = 'fits'
+convert_fluxcal = True
+convert_polcal = False
 convert_target = True
 
 [CROSSCAL]
@@ -44,18 +44,19 @@ crosscal_fringestop = False
 crosscal_fringestop_mode = 'direct'
 crosscal_applysys = False
 crosscal_bandpass = True
-crosscal_polarisation = True
+crosscal_delay = True
+crosscal_polarisation = False
 crosscal_transfer_to_target = True
 
 [SELFCAL]
-selfcal_image_imsize = 1537
-selfcal_image_cellsize = 4
+selfcal_image_imsize = 513
+selfcal_image_cellsize = 10
 selfcal_splitdata = True
 selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
 selfcal_flagline = True
-selfcal_flagline_sigma = 15
-selfcal_parametric = True
+selfcal_flagline_sigma = 0.5
+selfcal_parametric = False
 selfcal_parametric_skymodel_radius = 0.5
 selfcal_parametric_skymodel_cutoff = 0.8
 selfcal_parametric_skymodel_distance = 30
@@ -64,23 +65,23 @@ selfcal_parametric_uvmin = 0.5
 selfcal_parametric_uvmax = 1000
 selfcal_parametric_amp = False
 selfcal_mode = 'standard'
-selfcal_mode_standard_majorcycle = 5
+selfcal_mode_standard_majorcycle = 3
 selfcal_mode_standard_majorcycle_function = 'square'
 selfcal_mode_standard_minorcycle = 3
 selfcal_mode_standard_minorcycle_function = 'linear'
-selfcal_mode_standard_c0 = 15.0
+selfcal_mode_standard_c0 = 10.0
 selfcal_mode_standard_c1 = 5.0
-selfcal_mode_standard_drinit = 150
+selfcal_mode_standard_drinit = 100
 selfcal_mode_standard_dr0 = 2.0
-selfcal_mode_standard_nsigma = 20
-selfcal_mode_standard_uvmin = [0.5,0.3,0.1,0.0,0.0]
-selfcal_mode_standard_uvmax = [3000,3000,3000,3000,3000]
-selfcal_mode_standard_solint = [10,8,5,3,1]
+selfcal_mode_standard_nsigma = 50
+selfcal_mode_standard_uvmin = [0.0,0.0,0.0]
+selfcal_mode_standard_uvmax = [3000,3000,3000]
+selfcal_mode_standard_solint = [5,3,0.5]
 selfcal_mode_standard_amp = 'auto'
-selfcal_mode_standard_amp_auto_limit = 0.5
+selfcal_mode_standard_amp_auto_limit = 1.0
 selfcal_mode_manual_majorcycle = 3
 selfcal_mode_manual_minorcycle = [3,3,3]
-selfcal_mode_manual_uvmin = [1,0.5,0.2]
+selfcal_mode_manual_uvmin = [0.0,0.0,0.0]
 selfcal_mode_manual_uvmax = [3000,3000,3000]
 selfcal_mode_manual_solint = [10,5,1]
 selfcal_mode_manual_niters = [[500,10000,10000],[500,10000,10000],[500,10000,10000]]
@@ -96,50 +97,30 @@ selfcal_mode_adaptive_resirmsfactor = 2.0       # clean cutoff = res.rms * this 
 selfcal_mode_adaptive_firstniter = 500          # number of iterations for clean for the first iteration
 selfcal_mode_adaptive_firstrmsfactor = 15.0     # rmsfactor for the first iteration
 
-[LINE]
-line_splitdata = True
-line_splitdata_chunkbandwidth = 0.02
-line_splitdata_channelbandwidth = 0.000039
-line_transfergains = True
-line_subtract = True
-line_subtract_mode = 'uvmodel'
-line_subtract_mode_uvmodel_majorcycle_function = 'square'
-line_subtract_mode_uvmodel_minorcycle_function = 'linear'
-line_subtract_mode_uvmodel_minorcycle = 3
-line_subtract_mode_uvmodel_c0 = 15.0
-line_subtract_mode_uvmodel_c1 = 5.0
-line_subtract_mode_uvmodel_drinit = 150
-line_subtract_mode_uvmodel_dr0 = 2.0
-line_subtract_mode_uvmodel_nsigma = 20
-line_subtract_mode_uvmodel_imsize = 1537
-line_subtract_mode_uvmodel_cellsize = 4
-
 [FINAL]
 final_continuum = True
-final_continuum_image_imsize = 1537
-final_continuum_image_cellsize = 4
-final_continuum_image_centre = '15:05:00.0,43:30:00.0'
+final_continuum_image_imsize = 513
+final_continuum_image_cellsize = 10
+final_continuum_image_centre = ''
 final_continuum_image_beam = ''
-final_continuum_robust = ''
 final_continuum_mode = 'stack'
 final_continuum_majorcycle_function = 'square'
 final_continuum_minorcycle_function = 'linear'
 final_continuum_minorcycle = 3
-final_continuum_c0 = 15.0
+final_continuum_c0 = 10.0
 final_continuum_c1 = 5.0
-final_continuum_drinit = 150
+final_continuum_drinit = 100
 final_continuum_dr0 = 2.0
-final_continuum_nsigma = 20
+final_continuum_nsigma = 30
 final_line = False
-final_line_image_imsize = 1537
-final_line_image_cellsize = 4
-final_line_image_centre = '15:05:00.0,43:30:00.0'
-final_line_image_robust = ''
+final_line_image_imsize = 513
+final_line_image_cellsize = 10
+final_line_image_centre = ''
+final_line_clean_ratio_limit = 1.2
 final_polarisation = False
-final_polarisation_image_imsize = 1537
-final_polarisation_image_cellsize = 4
-final_polarisation_image_centre = '15:05:00.0,43:30:00.0'
+final_polarisation_image_imsize = 513
+final_polarisation_image_cellsize = 10
+final_polarisation_image_centre = ''
 final_polarisation_image_beam = ''
-final_polarisation_image_robust = ''
 final_polarisation_makecube = True
 final_polarisation_rmsynth = True
