- updated final module to include line imaging - added option for seting the dynamic range in the first minor cycle of an iteration - added option to set the robust parameter in final line and continuum imaging - added option to set the restoring beam in final line and continuum imaging - added option to add a convolution to a given resolution for final line and continuum imaging - changed default.cfg to APERTIF parameters - updated M51 APERTIF notebook

--- a/ipython-notebooks/commissioning/APERTIF/M51.cfg
+++ b/ipython-notebooks/commissioning/APERTIF/M51.cfg
@@ -71,6 +71,7 @@ selfcal_mode_standard_minorcycle = 3
 selfcal_mode_standard_minorcycle_function = 'linear'
 selfcal_mode_standard_c0 = 10.0
 selfcal_mode_standard_c1 = 5.0
+selfcal_mode_standard_minorcycle0_dr = 3.0
 selfcal_mode_standard_drinit = 100
 selfcal_mode_standard_dr0 = 2.0
 selfcal_mode_standard_nsigma = 50
@@ -97,26 +98,56 @@ selfcal_mode_adaptive_resirmsfactor = 2.0       # clean cutoff = res.rms * this 
 selfcal_mode_adaptive_firstniter = 500          # number of iterations for clean for the first iteration
 selfcal_mode_adaptive_firstrmsfactor = 15.0     # rmsfactor for the first iteration
 
+[LINE]
+line_splitdata = True
+line_splitdata_chunkbandwidth = 0.02
+line_splitdata_channelbandwidth = 0.000012
+line_transfergains = True
+line_subtract = True
+line_subtract_mode = 'uvmodel'
+line_subtract_mode_uvmodel_majorcycle_function = 'square'
+line_subtract_mode_uvmodel_minorcycle_function = 'linear'
+line_subtract_mode_uvmodel_minorcycle = 3
+line_subtract_mode_uvmodel_c0 = 10.0
+line_subtract_mode_uvmodel_c1 = 5.0
+line_subtract_mode_uvmodel_drinit = 100
+line_subtract_mode_uvmodel_dr0 = 2.0
+line_subtract_mode_uvmodel_nsigma = 30
+line_subtract_mode_uvmodel_imsize = 513
+line_subtract_mode_uvmodel_cellsize = 10
+line_subtract_mode_uvmodel_minorcycle0_dr = 3.0
+
 [FINAL]
 final_continuum = True
 final_continuum_image_imsize = 513
 final_continuum_image_cellsize = 10
 final_continuum_image_centre = ''
-final_continuum_image_beam = ''
+final_continuum_image_restorbeam = ''
+final_continuum_image_convolbeam = '45,45,0.0'
 final_continuum_mode = 'stack'
 final_continuum_majorcycle_function = 'square'
 final_continuum_minorcycle_function = 'linear'
+final_continuum_minorcycle0_dr = 3.0
 final_continuum_minorcycle = 3
 final_continuum_c0 = 10.0
 final_continuum_c1 = 5.0
 final_continuum_drinit = 100
 final_continuum_dr0 = 2.0
-final_continuum_nsigma = 30
+final_continuum_nsigma = 25
+final_continuum_robust = -2
 final_line = False
 final_line_image_imsize = 513
 final_line_image_cellsize = 10
 final_line_image_centre = ''
+final_line_image_robust = -2
 final_line_clean_ratio_limit = 1.2
+final_line_clean_c0 = 10.0
+final_line_clean_c1 = 5.0
+final_line_clean_nsigma = 30
+final_line_clean_minorcycle0_dr = 3.0
+final_line_clean_dr0 = 3.0
+final_line_image_restorbeam = ''
+final_line_image_convolbeam = '45,45,0.0'
 final_polarisation = False
 final_polarisation_image_imsize = 513
 final_polarisation_image_cellsize = 10
