- added an option to the preflag step for flagging individual channels

--- a/default.cfg
+++ b/default.cfg
@@ -27,6 +27,7 @@ preflag_manualflag_antenna = ''
 preflag_manualflag_corr = 'XY,YX,YY'
 preflag_manualflag_shadow = True
 preflag_manualflag_baseline = ''
+preflag_manualflag_channel = ''
 
 [CONVERT]
 convert_ms2uvfits = True
