- fixed a bug in selfcal and final for the first minor/major cycle - fixed a bug in preflag to flag correlations - updated cfg files for reduction of M51 APERTIF data

--- a/default.cfg
+++ b/default.cfg
@@ -68,18 +68,18 @@ selfcal_parametric_amp = False
 selfcal_mode = 'standard'
 selfcal_mode_standard_majorcycle = 3
 selfcal_mode_standard_majorcycle_function = 'square'
-selfcal_mode_standard_minorcycle = 3
-selfcal_mode_standard_minorcycle_function = 'linear'
+selfcal_mode_standard_minorcycle = 5
+selfcal_mode_standard_minorcycle_function = 'square'
 selfcal_mode_standard_c0 = 10.0
 selfcal_mode_standard_c1 = 5.0
 selfcal_mode_standard_minorcycle0_dr = 3.0
-selfcal_mode_standard_drinit = 100
+selfcal_mode_standard_drinit = 25
 selfcal_mode_standard_dr0 = 2.0
 selfcal_mode_standard_nsigma = 50
-selfcal_mode_standard_uvmin = [0.0,0.0,0.0]
+selfcal_mode_standard_uvmin = [0.0,0.0,0.0,0.0]
 selfcal_mode_standard_uvmax = [3000,3000,3000]
 selfcal_mode_standard_solint = [5,3,0.5]
-selfcal_mode_standard_amp = 'auto'
+selfcal_mode_standard_amp = False
 selfcal_mode_standard_amp_auto_limit = 1.0
 selfcal_mode_manual_majorcycle = 3
 selfcal_mode_manual_minorcycle = [3,3,3]
@@ -107,11 +107,11 @@ line_transfergains = True
 line_subtract = True
 line_subtract_mode = 'uvmodel'
 line_subtract_mode_uvmodel_majorcycle_function = 'square'
-line_subtract_mode_uvmodel_minorcycle_function = 'linear'
-line_subtract_mode_uvmodel_minorcycle = 3
+line_subtract_mode_uvmodel_minorcycle_function = 'square'
+line_subtract_mode_uvmodel_minorcycle = 5
 line_subtract_mode_uvmodel_c0 = 10.0
 line_subtract_mode_uvmodel_c1 = 5.0
-line_subtract_mode_uvmodel_drinit = 100
+line_subtract_mode_uvmodel_drinit = 25
 line_subtract_mode_uvmodel_dr0 = 2.0
 line_subtract_mode_uvmodel_nsigma = 30
 line_subtract_mode_uvmodel_imsize = 513
@@ -124,18 +124,18 @@ final_continuum_image_imsize = 513
 final_continuum_image_cellsize = 10
 final_continuum_image_centre = ''
 final_continuum_image_restorbeam = ''
-final_continuum_image_convolbeam = '45,45,0.0'
+final_continuum_image_convolbeam = ''
 final_continuum_mode = 'stack'
 final_continuum_majorcycle_function = 'square'
-final_continuum_minorcycle_function = 'linear'
+final_continuum_minorcycle_function = 'square'
 final_continuum_minorcycle0_dr = 3.0
-final_continuum_minorcycle = 3
+final_continuum_minorcycle = 5
 final_continuum_c0 = 10.0
 final_continuum_c1 = 5.0
-final_continuum_drinit = 100
+final_continuum_drinit = 25
 final_continuum_dr0 = 2.0
-final_continuum_nsigma = 25
-final_continuum_robust = -2
+final_continuum_nsigma = 30
+final_continuum_robust = ''
 final_line = False
 final_line_image_imsize = 513
 final_line_image_cellsize = 10
