- improved flagging strategy in preflag. Now first applies manualflags, then derives a preliminary bandpass for flagging (which is discarded later) and then executes aoflagger - Added a notebook for easier inspection of the bandpass stability

--- a/default.cfg
+++ b/default.cfg
@@ -1,9 +1,9 @@
 [INITIAL]
 apercaldir = '/home/adebahr/apercal'
-fluxcal = '3C147.MS'
+fluxcal = ''
 polcal = ''
-target = 'M51.MS'
-basedir = '/data/adebahr/apertif/7070708_M51/'
+target = ''
+basedir = ''
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
 selfcalsubdir = 'selfcal'
@@ -11,16 +11,9 @@ linesubdir = 'line'
 finalsubdir = 'final'
 
 [PREFLAG]
-preflag_aoflagger = True
-preflag_aoflagger_fluxcal = True
-preflag_aoflagger_polcal = False
-preflag_aoflagger_target = True
-preflag_aoflagger_fluxcalstrat = 'target_apertif_XX.rfis'
-preflag_aoflagger_polcalstrat = ''
-preflag_aoflagger_targetstrat = 'target_apertif_XX.rfis'
 preflag_manualflag = True
 preflag_manualflag_fluxcal = True
-preflag_manualflag_polcal = False
+preflag_manualflag_polcal = True
 preflag_manualflag_target = True
 preflag_manualflag_auto = True
 preflag_manualflag_antenna = ''
@@ -28,6 +21,15 @@ preflag_manualflag_corr = 'XY,YX,YY'
 preflag_manualflag_shadow = True
 preflag_manualflag_baseline = ''
 preflag_manualflag_channel = ''
+preflag_manualflag_time = ''
+preflag_aoflagger = True
+preflag_aoflagger_bandpass = True
+preflag_aoflagger_fluxcal = True
+preflag_aoflagger_polcal = True
+preflag_aoflagger_target = True
+preflag_aoflagger_fluxcalstrat = 'fluxcal_apertif_XX.rfis'
+preflag_aoflagger_polcalstrat = 'fluxcal_apertif_XX.rfis'
+preflag_aoflagger_targetstrat = 'fluxcal_apertif_XX.rfis'
 
 [CONVERT]
 convert_ms2uvfits = True
