--- a/ipython-notebooks/commissioning/APERTIF/Bandpass_stability.cfg
+++ b/ipython-notebooks/commissioning/APERTIF/Bandpass_stability.cfg
@@ -1,9 +1,9 @@
 [INITIAL]
 apercaldir = '/home/adebahr/apercal'
-fluxcal = '3C147.MS'
+fluxcal = '3C286.MS'
 polcal = ''
-target = 'NGC4062.MS'
-basedir = '/data/adebahr/apertif/tutorial/A2/'
+target = ''
+basedir = '/data/adebahr/apertif/090808_3C286/'
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
 selfcalsubdir = 'selfcal'
@@ -11,32 +11,35 @@ linesubdir = 'line'
 finalsubdir = 'final'
 
 [PREFLAG]
-preflag_aoflagger = True
-preflag_aoflagger_fluxcal = True
-preflag_aoflagger_polcal = False
-preflag_aoflagger_target = True
-preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'
-preflag_aoflagger_polcalstrat = 'polcal.rfis'
-preflag_aoflagger_targetstrat = 'target.rfis'
 preflag_manualflag = True
 preflag_manualflag_fluxcal = True
 preflag_manualflag_polcal = False
-preflag_manualflag_target = True
+preflag_manualflag_target = False
 preflag_manualflag_auto = True
-preflag_manualflag_antenna = 'RT5'
+preflag_manualflag_antenna = ''
 preflag_manualflag_corr = ''
 preflag_manualflag_shadow = True
 preflag_manualflag_baseline = ''
+preflag_manualflag_channel = ''
+preflag_manualflag_time = '19:45:0~21:00:0'
+preflag_aoflagger = True
+preflag_aoflagger_bandpass = True
+preflag_aoflagger_fluxcal = True
+preflag_aoflagger_polcal = False
+preflag_aoflagger_target = False
+preflag_aoflagger_fluxcalstrat = 'fluxcal_apertif_XX.rfis'
+preflag_aoflagger_polcalstrat = ''
+preflag_aoflagger_targetstrat = ''
 
 [CONVERT]
 convert_ms2uvfits = True
 convert_ms2uvfits_tool = 'casa'
 convert_ms2uvfits_tool_casa_autocorr = False
 convert_uvfits2mir = True
-convert_uvfits2mir_tool = 'wsrtfits'
+convert_uvfits2mir_tool = 'fits'
 convert_fluxcal = True
 convert_polcal = False
-convert_target = True
+convert_target = False
 
 [CROSSCAL]
 crosscal_mode = 'WSRT'
@@ -44,14 +47,6 @@ crosscal_fringestop = False
 crosscal_fringestop_mode = 'direct'
 crosscal_applysys = False
 crosscal_bandpass = True
+crosscal_delay = False
 crosscal_polarisation = False
-crosscal_transfer_to_target = True
-
-[SELFCAL]
-selfcal_image_imsize = 1537
-selfcal_image_cellsize = 4
-selfcal_splitdata = True
-selfcal_splitdata_chunkbandwidth = 0.02
-selfcal_splitdata_channelbandwidth = 0.001
-selfcal_flagline = True
-selfcal_flagline_showplot = True
+crosscal_transfer_to_target = False
